--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -20,10 +21,18 @@ buildscript {
         // in the individual module build.gradle files
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+}
+
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 task clean(type: Delete) {
